rgw: url_encode prefixes if requested for List Objects

Also doesn't encode "/" similar to S3

Fixes: https://tracker.ceph.com/issues/41870
Signed-off-by: Abhishek Lekshmanan <abhishek@suse.com>
(cherry picked from commit 4cae7a26184b98f1fb11ef180a90c5db695ea2d8)

Conflicts:
	src/rgw/rgw_rest_s3.cc
- trivial difference in white-space